--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 
-@media only screen and (min-width:320px) and (max-width:480px) {
+@media only screen and (max-width:480px) {
 
   header {
     max-height: 4rem;
